Chinese Readability Improvements And Other Fixes

--- a/source/css/_base/layout.styl
+++ b/source/css/_base/layout.styl
@@ -6,6 +6,7 @@ body
   color color-font
   font-family font-default
   font-size 16px
+  height 100%
 
   @media screen and (max-width: 768px)
     font-size 13px
